# ContextEngineering

./: main.py  pyproject.toml
Notebooks/: 1.0 RAG.ipynb  2.0 ToolLoadout.ipynb  3.0 ContextQuarantine.ipynb  4.0 ContextPruning.ipynb  5.0 ContextSummarization.ipynb  6.0 ContextOffloading.ipynb  utils.py
