[project]
name = "contextengineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.6.3",
    "langgraph-bigtool>=0.0.3",
    "pandas>=2.3.1",
    "rich>=14.1.0",
    "tiktoken>=0.9.0",
]
